--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,1 +1,7 @@
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import './global/navigation/primary';
+@import './global/ribbon';
+@import './global/typography';
