--- a/src/css/carousel.scss
+++ b/src/css/carousel.scss
@@ -3,14 +3,20 @@
 .carousel-cell {
 	min-height: 100%;
 	.cell-wrap {
-		opacity: 0.5;
-		transform: scale(0.5);
+		transform: scale(0.85);
+	}
+}
+
+.carousel-cell {
+	opacity: 0.5 !important;
+	transition: opacity 1s ease !important;
+	&.is-selected {
+		opacity: 1 !important;
 	}
 }
 
 .carousel-cell.is-selected {
 	.cell-wrap {
-		opacity: 1;
 		transform: scale(1);
 	}
 }
