--- a/src/css/global/_typography.scss
+++ b/src/css/global/_typography.scss
@@ -55,3 +55,14 @@ li {
 	--val: 4vw;
 	--max: 1rem;
 }
+
+
+footer h2 {
+	font-family: "Magdelin", sans-serif;
+}
+
+footer, .copyright {
+	a {
+		text-decoration: underline;
+	}
+}
