--- a/src/css/carousel.scss
+++ b/src/css/carousel.scss
@@ -1,15 +1,19 @@
 @import "~flickity/dist/flickity.min.css";
 
 .carousel-cell {
-	min-height: 100%;
-	.cell-wrap {
-		transform: scale(0.85);
-		transition: all 0.5s ease-out;
+	@media screen and (min-width: 768px) {
+		width: 50%;
+		.cell-wrap {
+			transform: scale(0.85);
+			transition: all 0.5s ease-out;
+		}
 	}
 }
 
 .carousel-cell {
-	opacity: 0.5 !important;
+	@media screen and (min-width: 768px) {
+		opacity: 0.5 !important;
+	}
 	transition: opacity 1s ease !important;
 	&.is-selected {
 		opacity: 1 !important;
@@ -23,7 +27,9 @@
 }
 
 .carousel-cell .hero {
-	max-width: 16rem;
+	@media screen and (min-width: 768px) {
+		max-width: 16rem;
+	}
 	margin: 0 auto;
 }
 
