--- a/src/css/global/_ribbon.scss
+++ b/src/css/global/_ribbon.scss
@@ -1,4 +1,25 @@
 .ribbon {
+	position: absolute;
+	top: 0;
+	right: 10rem;
+	color: #FFF;
+	font-family: MagdelinBold, sans-serif;
+	text-align: center;
+
+	.content {
+		position: absolute;
+		top: 0.5rem;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: 0 auto;
+		padding: 0.5rem;
+	}
+
+	figure {
+		width: 8rem;
+	}
+
 	p {
 		line-height: 1.25;
 		margin-bottom: 0;
