--- a/src/css/global/_ribbon.scss
+++ b/src/css/global/_ribbon.scss
@@ -3,7 +3,7 @@
 	top: 0;
 	right: 10rem;
 	color: #FFF;
-	font-family: MagdelinBold, sans-serif;
+	font-family: var(--magdelinBold), sans-serif;
 	text-align: center;
 
 	.content {
