Extracting how hatties efect CSS.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -18,5 +18,6 @@
 
 @import './sections/banner';
 @import './sections/how-does-gsap-work';
+@import './sections/hatties-effect';
 
 @import './carousel';
