--- a/src/css/sections/_how-does-gsap-work.scss
+++ b/src/css/sections/_how-does-gsap-work.scss
@@ -1,32 +1,88 @@
 .how {
+	margin-top: 1.25rem;
+
+	@media screen and (min-width: 768px) {
+		margin-top: 0;
+	}
+
 	h1 {
 		color: var(--gsap-blue);
 	}
+
 	.down_arrow {
 		width: 2rem;
 	}
 }
 
+.how .hero_image {
+	display: none;
+
+	@media screen and (min-width: 768px) {
+		display: block;
+	}
+}
+
+.how .hero_images_mobile {
+	h3 {
+		color: var(--gsap-blue);
+		margin: 0;
+	}
+
+	@media screen and (min-width: 768px) {
+		display: none;
+	}
+
+	div {
+		margin-bottom: 1rem;
+	}
+}
+
 .how .columns {
 	display: flex;
-	justify-content: space-between;
 	margin-top: 2rem;
+	flex-direction: column;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
 	& > .column:first-child {
 		flex: none;
 		width: 18rem;
+		margin-bottom: 1rem;
+
+		@media screen and (min-width: 768px) {
+			margin-bottom: 0;
+		}
 	}
+
 	& > .column:last-child {
 		display: flex;
+		flex-direction: column;
+
+		@media screen and (min-width: 768px) {
+			flex-direction: row;
+		}
+
 		.column {
 			flex: none;
 			width: 18rem;
+			margin-bottom: 1.25rem;
+
+			@media screen and (min-width: 768px) {
+				margin-bottom: 0;
+			}
+
 			figure {
 				margin-bottom: 0.5rem;
+
 				img {
 					height: 22px;
 				}
 			}
 		}
+
 		.column:not(:last-child) {
 			margin-right: 2rem;
 		}
@@ -34,30 +90,51 @@
 }
 
 .earned_results {
-	display: flex;
-	align-items: center;
-	max-width: 900px;
-	margin: 0 auto;
+	width: 100vw;
+	margin-top: 5rem;
+	margin-right: -50vw;
+	margin-left: -50vw;
+	right: 50%;
+	left: 50%;
+	position: relative;
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		align-items: center;
+		max-width: 900px;
+		margin: 0 auto;
+	}
 }
 
 .earned_results .container {
 	background: var(--gsap-blue);
 	color: white;
 	flex: none;
-	width: 600px;
-	border-radius: 0.375rem;
 	padding: 2rem;
 	margin-right: 2rem;
+
+	@media screen and (min-width: 768px) {
+		border-radius: 0.375rem;
+		width: 600px;
+	}
 }
 
 .earned_results .wrapper {
 	display: flex;
+	flex-direction: column;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+	}
+
 	.column_1 {
 		margin-right: 1.5rem;
+
 		figure {
 			width: 3rem;
 			margin-bottom: 1rem;
 		}
+
 		h1 {
 			color: #FFFFFF;
 			text-transform: uppercase;
@@ -68,22 +145,36 @@
 .earned_results .column_2_wrapper {
 	display: flex;
 	justify-content: space-between;
+	flex-direction: column;
+
+	.column_2_item {
+		margin-bottom: 0.75rem;
+	}
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+
+		.column_2_item:not(:last-child) {
+			margin-bottom: 0.75rem;
+		}
+	}
+
 	.column_2_item {
 		display: flex;
 		align-items: center;
+
 		img {
 			width: 1rem;
 			margin-right: 0.5rem;
 		}
+
 		span {
 			font-size: 0.875rem;
 			line-height: 1.25rem;
 			font-family: var(--magdelinBold), sans-serif;
 		}
 	}
-	.column_2_item:not(:last-child) {
-		margin-bottom: 0.75rem;
-	}
+
 }
 
 .earned_results .column_2_text {
@@ -94,21 +185,26 @@
 	line-height: 1.25rem;
 }
 
-.earned_results > div:last-child {
+.earned_results .student_invest_of_time {
 	color: var(--gsap-blue);
+	padding: 2rem;
+
 	header {
 		display: flex;
 		align-items: center;
 		margin-bottom: 0.5rem;
+
 		img {
 			margin-right: 0.25rem;
 		}
+
 		span {
 			text-transform: uppercase;
 			font-size: 0.75rem;
 			line-height: 1rem;
 		}
 	}
+
 	p {
 		font-size: 0.875rem;
 		line-height: 1.25rem;
