--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -21,5 +21,6 @@
 @import './sections/banner';
 @import './sections/how-does-gsap-work';
 @import './sections/hatties-effect';
+@import './sections/about';
 
 @import './carousel';
