--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -22,5 +22,6 @@
 @import './sections/how-does-gsap-work';
 @import './sections/hatties-effect';
 @import './sections/about';
+@import './sections/icap';
 
 @import './carousel';
