--- a/src/css/sections/_icap.scss
+++ b/src/css/sections/_icap.scss
@@ -134,3 +134,72 @@
 	margin: 0 auto;
 	max-width: 32rem;
 }
+
+.learn_more_columns {
+	position: relative;
+	color: #000;
+}
+
+.learn_more_columns .background_dots {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-size: cover !important;
+}
+
+.learn_more_columns_wrapper {
+	position: relative;
+	z-index: 10;
+	margin: 0 auto;
+	padding-bottom: 5rem;
+	padding-top: 3rem;
+
+	h3 {
+		text-transform: uppercase;
+		text-align: center;
+		font-family: var(--magdelin), sans-serif;
+		letter-spacing: 0.1em;
+	}
+}
+
+.learn_more_columns_wrapper .columns {
+	display: flex;
+	flex-direction: column;
+	margin: 3rem auto 0 auto;
+	max-width: 80rem;
+	padding: 0 2rem;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+		padding: 0;
+	}
+
+	.column {
+		margin-top: 1.25rem;
+
+		span {
+			display: block;
+			font-family: var(--magdelinBold), sans-serif;
+			font-size: 0.75rem;
+			line-height: 1rem;
+			margin-bottom: 0.25rem;
+			color: var(--gsap-blue);
+		}
+
+		h4 {
+			color: var(--gsap-blue);
+			margin-bottom: 0.25rem;
+		}
+
+		@media screen and (min-width: 768px) {
+			width: 33.333333%;
+			margin-right: 3rem;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+	}
+}
