--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -23,5 +23,6 @@
 @import './sections/hatties-effect';
 @import './sections/about';
 @import './sections/icap';
+@import './sections/resources';
 
 @import './carousel';
