--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -17,6 +17,7 @@
 @import './global/ribbon';
 @import './global/typography';
 @import './global/pulstating-button';
+@import './global/footer';
 
 @import './sections/banner';
 @import './sections/how-does-gsap-work';
