--- a/src/css/global/_footer.scss
+++ b/src/css/global/_footer.scss
@@ -49,6 +49,7 @@
 .copyright_wrapper {
 	margin: 0 auto;
 	max-width: 28rem;
-	font-size: .75rem;
+	font-size: .65rem;
 	text-align: center;
+	padding: 0 0.20rem;
 }
