--- a/src/css/sections/_hatties-effect.scss
+++ b/src/css/sections/_hatties-effect.scss
@@ -6,7 +6,7 @@
 	left: 50%;
 	position: relative;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		margin-top: 5rem;
 	}
 }
@@ -39,17 +39,20 @@
 }
 
 .hatties_effect .content {
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		display: flex;
 		max-width: 64rem;
 		margin: 4rem auto 0 auto;
+		padding: 0 2rem;
 	}
 
 	article {
 		padding: 0 1.35rem;
 		text-align: center;
+		max-width: 32rem;
+		margin: 0 auto;
 
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 990px) {
 			flex: none;
 			max-width: 24em;
 			margin-right: 5rem;
@@ -75,9 +78,9 @@
 	background: #FFF;
 	font-size: 0.875rem;
 	line-height: 1.25rem;
-	margin-top: 1.5rem;
+	margin: 1.5rem auto 0 auto;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		margin-top: 0;
 	}
 
