--- a/src/css/sections/_how-does-gsap-work.scss
+++ b/src/css/sections/_how-does-gsap-work.scss
@@ -1,7 +1,7 @@
 .how {
 	margin-top: 1.25rem;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		margin-top: 0;
 	}
 
@@ -42,7 +42,7 @@
 	margin-top: 2rem;
 	flex-direction: column;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 1024px) {
 		flex-direction: row;
 		justify-content: space-between;
 	}
@@ -52,7 +52,7 @@
 		width: 18rem;
 		margin-bottom: 1rem;
 
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 990px) {
 			margin-bottom: 0;
 		}
 	}
@@ -61,7 +61,7 @@
 		display: flex;
 		flex-direction: column;
 
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 990px) {
 			flex-direction: row;
 		}
 
@@ -70,7 +70,7 @@
 			width: 18rem;
 			margin-bottom: 1.25rem;
 
-			@media screen and (min-width: 768px) {
+			@media screen and (min-width: 990px) {
 				margin-bottom: 0;
 			}
 
@@ -98,24 +98,27 @@
 	left: 50%;
 	position: relative;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		display: flex;
 		align-items: center;
 		max-width: 900px;
 		margin: 0 auto;
+		left: 0;
+		right: 0;
+		width: auto;
 	}
 }
 
-.earned_results .container {
+.earned_results_container {
 	background: var(--gsap-blue);
 	color: white;
 	flex: none;
 	padding: 2rem;
-	margin-right: 2rem;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		border-radius: 0.375rem;
 		width: 600px;
+		margin-right: 2rem;
 	}
 }
 
@@ -123,7 +126,7 @@
 	display: flex;
 	flex-direction: column;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		flex-direction: row;
 	}
 
@@ -151,7 +154,7 @@
 		margin-bottom: 0.75rem;
 	}
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 990px) {
 		flex-direction: row;
 
 		.column_2_item:not(:last-child) {
@@ -183,11 +186,21 @@
 	padding-top: .75rem;
 	font-size: 0.875rem;
 	line-height: 1.25rem;
+	max-width: 30rem;
+
+	@media screen and (min-width: 990px) {
+		max-width: none;
+	}
 }
 
 .earned_results .student_invest_of_time {
 	color: var(--gsap-blue);
 	padding: 2rem;
+	max-width: 30rem;
+
+	@media screen and (min-width: 990px) {
+		max-width: none;
+	}
 
 	header {
 		display: flex;
