--- a/src/css/sections/_icap.scss
+++ b/src/css/sections/_icap.scss
@@ -191,6 +191,7 @@
 
 	.column {
 		margin-top: 1.25rem;
+		max-width: 30rem;
 
 		span {
 			display: block;
@@ -209,6 +210,7 @@
 		@media screen and (min-width: 990px) {
 			width: 33.333333%;
 			margin-right: 3rem;
+			max-width: none;
 
 			&:last-child {
 				margin-right: 0;
