--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -76,6 +76,13 @@
 
 	img {
 		width: 6rem;
+		@media screen and (min-width: 990px) {
+			width: 8rem;
+		}
+
+		@media screen and (min-width: 1200px) {
+			width: 12rem;
+		}
 	}
 }
 
@@ -96,13 +103,13 @@
 		}
 	}
 
-	.arrow {
-		width: 318px;
-		height: 250px;
-		position: absolute;
-		right: -11rem;
-		bottom: -7.5rem;
-	}
+	//.arrow {
+	//	width: 318px;
+	//	height: 250px;
+	//	position: absolute;
+	//	right: -11rem;
+	//	bottom: -7.5rem;
+	//}
 }
 
 .about .mission_statement {
