--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,6 +14,7 @@
 @import './global/header';
 @import './global/page';
 @import './global/navigation/primary';
+@import './global/navigation/secondary';
 @import './global/ribbon';
 @import './global/typography';
 @import './global/pulstating-button';
