--- a/src/css/global/navigation/_secondary.scss
+++ b/src/css/global/navigation/_secondary.scss
@@ -2,49 +2,52 @@
 	position: fixed;
 	top: 50%;
 	bottom: 50%;
-	right: 1.5rem;
-	width: 20px;
+	right: 11.5rem;
+	width: 200px;
+	height: 200px;
 	z-index: 100;
+	display: flex;
+	align-items: center;
 
-	div {
-		margin-bottom: .95rem;
+
+	.badges div,
+	.bullets div {
+		margin-bottom: .5rem;
+	}
+
+	.bullets {
+		margin-left: .5rem;
+
+		div {
+			height: 40px;
+			display: flex;
+			align-items: center;
+		}
+	}
+
+	.badge {
+		background: var(--gsap-blue);
+		color: white;
+		font-family: var(--magdelinBold), sans-serif;
+		font-size: 1rem;
+		padding: .5rem 1.35rem;
+		border-radius: 20px;
+		transition: all .3s ease-in-out;
+		text-align: center;
+		// opacity: 0;
 	}
 
 	a {
-		display: flex;
-		align-items: center;
-		position: relative;
+		display: block;
+		background: #C7C7C7;
+		border-radius: 50%;
+		width: 11px;
+		height: 11px;
+		transition: all 0.3s ease;
 
-		.badge {
-			background: var(--gsap-blue);
-			color: white;
-			font-family: var(--magdelinBold), sans-serif;
-			font-size: 1rem;
-			padding: .5rem 1.35rem;
-			border-radius: 20px;
-			position: absolute;
-			left: -5.5rem;
-			top: -1rem;
-			transition: all .3s ease-in-out;
-			opacity: 0;
-		}
-
-		span {
-			background: #C7C7C7;
-			border-radius: 50%;
-			width: 11px;
-			height: 11px;
-			display: block;
-			transition: all 0.3s ease;
-		}
 
 		&:hover {
-			span {
-				background: var(--gsap-blue);
-			}
-			.badge {
-				opacity: 1;
-			}
+			background: var(--gsap-blue);
 		}
 	}
 
