--- a/src/css/global/navigation/_secondary.scss
+++ b/src/css/global/navigation/_secondary.scss
@@ -2,9 +2,7 @@
 	position: fixed;
 	top: 50%;
 	bottom: 50%;
-	right: 11.5rem;
-	width: 200px;
-	height: 200px;
+	right: 2rem;
 	z-index: 100;
 	display: flex;
 	align-items: center;
@@ -34,7 +32,11 @@
 		border-radius: 20px;
 		transition: all .3s ease-in-out;
 		text-align: center;
-		// opacity: 0;
+		opacity: 0;
+
+		&.active {
+			opacity: 1;
+		}
 	}
 
 	a {
