Results section init.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -26,6 +26,7 @@
 @import './sections/hatties-effect';
 @import './sections/about';
 @import './sections/icap';
+@import './sections/results';
 @import './sections/resources';
 
 @import './carousel';
