Results section init.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -20,6 +20,7 @@
 @import './global/typography';
 @import './global/pulstating-button';
 @import './global/footer';
+@import './global/earned_results';
 
 @import './sections/banner';
 @import './sections/how-does-gsap-work';
