--- a/src/css/global/_pulstating-button.scss
+++ b/src/css/global/_pulstating-button.scss
@@ -32,6 +32,12 @@
 	display: flex;
 	align-items: center;
 	z-index: 50;
+
+	&.active {
+		.plus__button__line-vertical {
+			opacity: 1;
+		}
+	}
 }
 
 .plus_button {
@@ -43,11 +49,6 @@
 	background: #FFF;
 	position: absolute;
 	pointer-events: none;
-}
-
-.plus__button__line-horizontal {
-	width: 20px;
-	height: .20rem;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -55,10 +56,16 @@
 	margin: auto;
 }
 
+.plus__button__line-horizontal {
+	width: 20px;
+	height: .20rem;
+}
+
 .plus__button__line-vertical {
 	height: 20px;
 	width: 3px;
-	display: none;
+	opacity: 0;
+	transition: opacity .2s ease-in-out;
 }
 
 .pulsating__button__container .bg:nth-child(2) {
