--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,6 +6,7 @@
 	--gsap-orange: #FF8900;
 	--gsap-blue: #0D3691;
 	--gsap-green: #2EB16B;
+	--gsap-dark-green: #2FB26B;
 	--gsap-gray: #646464;
 	--magdelin: MagdelinRegular;
 	--magdelinBold: MagdelinBold;
