--- a/src/css/sections/_results.scss
+++ b/src/css/sections/_results.scss
@@ -7,6 +7,16 @@
 	}
 }
 
+//.results .background_dots {
+//	width: 100%;
+//	height: 100%;
+//	position: absolute;
+//	top: 0;
+//	left: 0;
+//	background-size: cover !important;
+//}
+
+
 .results .charts .columns {
 	margin-top: 2rem;
 	@media screen and (min-width: 768px) {
