--- a/src/css/sections/_results.scss
+++ b/src/css/sections/_results.scss
@@ -7,15 +7,6 @@
 	}
 }
 
-//.results .background_dots {
-//	width: 100%;
-//	height: 100%;
-//	position: absolute;
-//	top: 0;
-//	left: 0;
-//	background-size: cover !important;
-//}
-
 .results .charts .columns {
 	margin-top: 2rem;
 	@media screen and (min-width: 768px) {
@@ -29,8 +20,10 @@
 }
 
 .results .earned_results {
-	max-width: 700px;
 	margin-top: 2.5rem;
+	@media  screen and (min-width: 990px) {
+		max-width: 700px;
+	}
 }
 
 .results .earned_results_container {
