--- a/src/css/sections/_results.scss
+++ b/src/css/sections/_results.scss
@@ -7,6 +7,11 @@
 	}
 }
 
+.results {
+	padding-top: 10rem;
+	padding-bottom: 5rem;
+}
+
 .results .charts .columns {
 	margin-top: 2rem;
 	@media screen and (min-width: 768px) {
