Misc changes. Stripping out footer animations.

--- a/src/css/sections/_how-does-gsap-work.scss
+++ b/src/css/sections/_how-does-gsap-work.scss
@@ -35,6 +35,19 @@
 	div {
 		margin-bottom: 1rem;
 	}
+
+	div:not(:last-child) h3 {
+		text-align: right;
+	}
+
+	div:last-child h3 {
+		position: absolute;
+		bottom: -2rem;
+		margin: 0 auto;
+		text-align: center;
+		left: 0;
+		right: 0;
+	}
 }
 
 .how .columns {
