--- a/src/css/sections/_results.scss
+++ b/src/css/sections/_results.scss
@@ -8,9 +8,11 @@
 	}
 }
 
-.results {
-	padding-top: 10rem;
-	padding-bottom: 5rem;
+section.results {
+	padding-top: 7rem;
+	@media screen and (min-width: 768px) {
+		padding-bottom: 5rem;
+	}
 }
 
 .chart_content {
