Misc updates. Per audit

--- a/src/css/global/_page.scss
+++ b/src/css/global/_page.scss
@@ -1,6 +1,6 @@
 .page_wrap {
 	position: relative;
-	padding: 3rem;
+	padding: 3rem 0;
 	font-family: var(--magdelin), sans-serif;
 	font-weight: 300;
 	max-width: 1440px;
