--- a/src/css/sections/_banner.scss
+++ b/src/css/sections/_banner.scss
@@ -3,6 +3,7 @@
 	flex-direction: column-reverse;
 	align-items: center;
 	margin-top: 2rem;
+	padding: 0 3rem;
 
 	@media screen and (min-width: 768px) {
 		flex-direction: row;
