--- a/src/css/global/_page.scss
+++ b/src/css/global/_page.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 .page_wrap {
 	position: relative;
 	padding: 3rem 0;
@@ -5,11 +9,6 @@
 	font-weight: 300;
 	max-width: 1440px;
 	margin: 0 auto;
-	overflow-x: hidden;
-
-	@media screen and (min-width: 1440px) {
-		overflow-x: visible;
-	}
 }
 
 .gsap_logo_combined {
